Revision history for PostgreSQL extension semver.

0.32.2

0.32.1  2023-08-01T23:20:31Z
      - Fixed compilation issue on Postgres 16.

0.32.0  2022-10-23T21:53:54Z
      - Add support for binary input (receive) and output (send) functions.
        Thanks to Anna Clemens for the pull request (#61)!

0.31.2  2021-09-28T02:03:35Z
      - Add an overflow check and properly compare the max size of INT32
        rather than INT. Thanks to Felix Lechner for the report and Tom Lane
        for the C lesson (#58).

0.31.1  2021-04-27T00:10:07Z
      - Updated the C code to pass the correct number of arguments to
        `hashint2()`. Thanks to Andrew Gierth for the spot.
      - Fixed an error in processing the prerelease where it could sometimes
        incorrectly report throw an error saying "prerelease numbers can't
        start with 0" for prereleases with no such leading zero.

0.31.0  2020-10-17T22:30:00Z
      - Added a workaround for an LLVM bitcode compile error. Thanks to
        @mark-s-a for the report (#40).
      - Removed `--load-language` from the options for running the tests,
        as it has not been needed since 9.1, we support 9.2 and higher,
        and it has been removed from Postgres 13.
      - Fixed an a collation error on Postgres 12 and higher. Thanks to
        Andrew for Marc Munro for the report and to Andrew Gierth for the
        fix (pgxn/pgxn-manager#67).
      - Prerelease parts are no longer compared compared case-insensitively,
        but in ASCII sort order, as required by the spec. This is a breaking
        change in the sense that `1.0.0-rc1` will now be considered greater than
        `1.0.0-RC1`, rather than equivalent, but they're both still valid. See
        https://github.com/semver/semver/issues/176 for the relevant
        discussion. Thanks to Andrew Gierth for the spot!

0.30.0  2020-05-16T19:28:36Z
      - ***** WARNING: This release breaks compatibility with previous versions! ******