@@ -1,4 +1,4 @@
 CREATE OR REPLACE FUNCTION is_semver(text)
 	RETURNS bool
-	AS 'semver'
+	AS 'MODULE_PATHNAME'
 	LANGUAGE C STRICT IMMUTABLE;
