@@ -6,7 +6,7 @@
  * + Tom Davis <tom@recursivedream.com>
  * + Xavier Caron <xcaron@gmail.com>
  *
- * Copyright 2010-2023 The pg-semver Maintainers. This program is Free
+ * Copyright 2010-2024 The pg-semver Maintainers. This program is Free
  * Software; see the LICENSE file for the license conditions.
  */
 
